--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/swagger": "^7.1.13",
     "@prisma/client": "^5.4.1",
     "bcrypt": "^5.1.1",
+    "chalk": "4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongodb": "^6.1.0",
